tests/interpreter-anf/pass/009-le-ge.hyg
assert(5 >= 2);
assert(5 <= 20)


